--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/react": "^2.1.1",
     "@astrojs/tailwind": "^3.1.1",
+    "@fontsource/plus-jakarta-sans": "^4.5.11",
     "@types/react": "^18.0.32",
     "@types/react-dom": "^18.0.11",
     "astro": "^2.1.9",
